--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "FinalPrep2022",
         "General",
         "holiday homework",
-        "Questions for Final"
+        "Questions for Final",
+        "Som"
     ]
 }
